--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">James Maina</a>.
+    Coded by <a href="https://x.com/Gme_maina?t=rxidSBzjMb0ZAwH1artGbg&s=09" target="_blank">James Maina</a>.
   </footer>
   <script src="index.js"></script>
 </body>
